Update DCSServerStats.java
Java JDK20 Update WIP